--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,5 +46,6 @@
     "react-router-dom": "^6.2.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
