--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -1,7 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/fc_coupang
+    url: jdbc:mysql://database-1.chir9oowfmfx.ap-northeast-2.rds.amazonaws.com:3306/fc_coupang
     driver-class-name: com.mysql.cj.jdbc.Driver
+    username: ${db.user.name}
+    password: ${db.user.password}
   jpa:
     open-in-view: false
     hibernate:
@@ -16,3 +18,4 @@ spring:
         format_sql: true
         use_sql_comments: true
         default_batch_fetch_size: 1000
+  redis.url: my-redis-1.imxuos.0001.apn2.cache.amazonaws.com
