--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/fc_coupang
+    url: jdbc:mysql://mysql:3306/fc_coupang
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${db.user.name}
     password: ${db.user.password}
@@ -18,9 +18,5 @@ spring:
         format_sql: true
         use_sql_comments: true
         default_batch_fetch_size: 1000
-  redis.url: localhost
-logging:
-  level:
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type: TRACE
+  redis.url: redis
 
