경기 결과 / 선수 이력 기능 개발

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -9,6 +9,7 @@ services:
       - "MYSQL_USER=${DB_USER_NAME}"
       - "MYSQL_PASSWORD=${DB_USER_PASSWORD}"
       - "MYSQL_DATABASE=fc_coupang"
+      - "TZ=Asia/Seoul"
   nginx:
     build:
       dockerfile: Dockerfile
@@ -26,6 +27,7 @@ services:
   app:
     build:
       dockerfile: Dockerfile
+      context: .
     environment:
       - "PROFILE=develop"
       - "DB_USER_NAME=${DB_USER_NAME}"
